<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgraound"
    tools:context=".SetupActivity">

    <Button
        android:id="@+id/btnOspite"
        style="@style/rowStyle"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/asap_medium"
        android:text="@string/Ospite"
        android:textAlignment="center"
        android:textColor="@color/Bianco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnLogin"
        style="@style/rowStyle"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/asap_medium"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/Bianco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnIscriviti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.918" />

    <Button
        android:id="@+id/btnIscriviti"
        style="@style/rowStyle"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/shape"
        android:fontFamily="@font/asap_medium"
        android:text="@string/Iscriviti"
        android:textAlignment="center"

        android:textColor="@color/Bianco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnOspite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="393dp"
        android:layout_height="265dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imageTourApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/tourapp" />

</android.support.constraint.ConstraintLayout>