<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@color/colorBackgraound">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/filtr"
        style="@style/titoliColor" />

   <ViewStub
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/view_stub"
       style="@style/titoliColor" />


    <!-- Cancel and apply buttons -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="72dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/annulla"
            android:textColor="@color/greySecondary"
            app:layout_constraintBottom_toBottomOf="@+id/button_search"
            app:layout_constraintEnd_toStartOf="@+id/button_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_search"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/applica"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>

